# env-manager

./: .env.smoke.example  .gitignore  PUBLISH.MD  README.md  README_ES.md  config_vars.yaml.example  pyproject.toml
.claude/skills/env-manager/: SKILL.md
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/01-environment-schema/: 01-01-SUMMARY.md  01-02-SUMMARY.md
.planning/phases/02-encrypted-dotenv-support/: 02-02-SUMMARY.md  02-VERIFICATION.md
.planning/phases/02-resolution-pipeline/: 02-01-SUMMARY.md  02-02-SUMMARY.md
.planning/phases/03-cli-encryption-script/: 03-01-SUMMARY.md  03-02-SUMMARY.md
.planning/phases/03-per-variable-overrides/: 03-01-SUMMARY.md  03-02-SUMMARY.md  03-VERIFICATION.md
.planning/phases/04-comprehensive-testing-and-validation-suite/: 04-03-SUMMARY.md
src/env_manager/: __init__.py  environment.py  exceptions.py  factory.py  manager.py  utils.py
src/env_manager/cli/: encrypt.py
src/env_manager/loaders/: dotenv.py  gcp.py
tests/: conftest.py  test_bool_to_string_coercion.py  test_cli_encrypt.py  test_encrypted_dotenv.py  test_end_to_end.py  test_environment.py  test_environment_integration.py  test_loaders.py  test_manager.py  test_optional_source.py  test_resolution_pipeline.py  test_resolution_validation.py  test_secret_origin_detection.py  test_validation.py
tests/fixtures/: .env.encrypted  .env.keys  prod_config.example.yaml
tests/smoke/: smoke_visual.py
tests/smoke/fixtures/: new_format.yaml  old_dotenv.yaml  old_gcp.yaml
(+2 files in other folders)
